--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -14,7 +14,7 @@
                 <a href="{% url 'dashboard' %}">Panel główny</a>
             </li>
             <li {% if section == 'images' %}class="selected"{% endif %}>
-                <a href="#">Obrazy</a>
+                <a href="{% url 'images:list' %}">Obrazy</a>
             </li>
             <li {% if section == 'people' %}class="selected"{% endif %}>
                 <a href="#">Osoby</a>
@@ -45,28 +45,26 @@
         {% block content %}
         {% endblock %}
     </div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/
-    jquery.min.js">
-</script>
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-    <script>  var csrftoken = $.cookie('csrftoken');
-      function csrfSafeMethod(method) {
-<!--          Te metody HTTP nie wymagają zabezpieczenia przed atakami typu CSRF.-->
-         return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-     }
-     $.ajaxSetup({
-         beforeSend: function(xhr, settings) {
-           if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-             xhr.setRequestHeader("X-CSRFToken", csrftoken);
-           }
-         }
-     });
-     $(document).ready(function(){
-        {% block domready %}
-        {% endblock %}
-     });
-</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+  <script>
+    var csrftoken = Cookies.get('csrftoken');
+    function csrfSafeMethod(method) {
+      // Te metody HTTP nie wymagajązabezpieczania przed CSRF
+      return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+    }
+    $.ajaxSetup({
+      beforeSend: function(xhr, settings) {
+        if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+          xhr.setRequestHeader("X-CSRFToken", csrftoken);
+        }
+      }
+    });
+    $(document).ready(function(){
+      {% block domready %}
+      {% endblock %}
+       });
+  </script>
 
 </body>
 </html>
